mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: mongodb
  name: mongodb-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mongodb
  template: 
    metadata: 
      labels: 
        app: mongodb
    spec: 
      containers: 
        - 
          image: mongo
          name: mongodb
          ports: 
            - 
              containerPort: 27017
